[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Brandon_reg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Baloo-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/disabled_O.png" type="Texture" id=3]
[ext_resource path="res://Images/ice_mountain_background.png" type="Texture" id=4]
[ext_resource path="res://Images/correct_100.png" type="Texture" id=5]
[ext_resource path="res://Images/large_box.png" type="Texture" id=6]
[ext_resource path="res://Scenes/12levels.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="12levels" type="Node2D"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="background" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false

[node name="large box" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Heading" type="Label" parent="."]
margin_left = 208.0
margin_top = 94.0
margin_right = 938.0
margin_bottom = 171.0
custom_colors/font_color = Color( 0.313726, 0.454902, 0.580392, 1 )
custom_fonts/font = SubResource( 1 )
text = "Levels scene"
align = 1
valign = 1

[node name="Lablel1" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = 313.0
margin_right = 271.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 1"
align = 1
autowrap = true

[node name="Lablel2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 314.0
margin_top = 314.0
margin_right = 420.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 2"
align = 1
autowrap = true

[node name="Lablel3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 465.0
margin_top = 314.0
margin_right = 571.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 3"
align = 1
autowrap = true

[node name="Lablel4" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 614.0
margin_top = 313.0
margin_right = 720.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 4"
align = 1
autowrap = true

[node name="Lablel5" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 763.0
margin_top = 313.0
margin_right = 869.0
margin_bottom = 347.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 5"
align = 1
autowrap = true

[node name="Lablel6" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 163.0
margin_top = 463.0
margin_right = 269.0
margin_bottom = 497.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 6"
align = 1
autowrap = true

[node name="Lablel7" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 314.0
margin_top = 462.0
margin_right = 420.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 7"
align = 1
autowrap = true

[node name="Lablel8" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 464.0
margin_top = 463.0
margin_right = 570.0
margin_bottom = 497.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 8"
align = 1
autowrap = true

[node name="Lablel9" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 615.0
margin_top = 462.0
margin_right = 721.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 9"
align = 1
autowrap = true

[node name="Lablel10" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 766.0
margin_top = 464.0
margin_right = 872.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 400, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "LEVEL 10"
align = 1
autowrap = true

[node name="Level_1" type="CenterContainer" parent="."]
margin_left = 175.0
margin_top = 241.0
margin_right = 496.0
margin_bottom = 562.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L1_button" type="TextureButton" parent="Level_1"]
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L1_disabled" type="Sprite" parent="Level_1"]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="Level_2" type="CenterContainer" parent="."]
margin_left = 325.0
margin_top = 241.0
margin_right = 646.0
margin_bottom = 562.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L2_button" type="TextureButton" parent="Level_2"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L2_disabled" type="Sprite" parent="Level_2"]
texture = ExtResource( 3 )
centered = false

[node name="Level_3" type="CenterContainer" parent="."]
margin_left = 475.0
margin_top = 241.0
margin_right = 796.0
margin_bottom = 562.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L3_button" type="TextureButton" parent="Level_3"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L3_disabled" type="Sprite" parent="Level_3"]
texture = ExtResource( 3 )
centered = false

[node name="Level_4" type="CenterContainer" parent="."]
margin_left = 625.0
margin_top = 241.0
margin_right = 946.0
margin_bottom = 562.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L4_button" type="TextureButton" parent="Level_4"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L4_disabled" type="Sprite" parent="Level_4"]
texture = ExtResource( 3 )
centered = false

[node name="Level_5" type="CenterContainer" parent="."]
margin_left = 775.0
margin_top = 241.0
margin_right = 1096.0
margin_bottom = 562.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L5_button" type="TextureButton" parent="Level_5"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L5_disabled" type="Sprite" parent="Level_5"]
texture = ExtResource( 3 )
centered = false

[node name="Level_6" type="CenterContainer" parent="."]
margin_left = 175.0
margin_top = 389.0
margin_right = 496.0
margin_bottom = 710.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L6_button" type="TextureButton" parent="Level_6"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L6_disabled" type="Sprite" parent="Level_6"]
texture = ExtResource( 3 )
centered = false

[node name="Level_7" type="CenterContainer" parent="."]
margin_left = 325.0
margin_top = 389.0
margin_right = 646.0
margin_bottom = 710.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L7_button" type="TextureButton" parent="Level_7"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L7_disabled" type="Sprite" parent="Level_7"]
texture = ExtResource( 3 )
centered = false

[node name="Level_8" type="CenterContainer" parent="."]
margin_left = 475.0
margin_top = 389.0
margin_right = 796.0
margin_bottom = 710.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L8_button" type="TextureButton" parent="Level_8"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L8_disabled" type="Sprite" parent="Level_8"]
texture = ExtResource( 3 )
centered = false

[node name="Level_9" type="CenterContainer" parent="."]
margin_left = 625.0
margin_top = 389.0
margin_right = 946.0
margin_bottom = 710.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L9_button" type="TextureButton" parent="Level_9"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L9_disabled" type="Sprite" parent="Level_9"]
texture = ExtResource( 3 )
centered = false

[node name="Level_10" type="CenterContainer" parent="."]
margin_left = 775.0
margin_top = 389.0
margin_right = 1096.0
margin_bottom = 710.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="L10_button" type="TextureButton" parent="Level_10"]
visible = false
margin_right = 321.0
margin_bottom = 321.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="L10_disabled" type="Sprite" parent="Level_10"]
texture = ExtResource( 3 )
centered = false

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 242.0
margin_top = 177.0
margin_right = 896.0
margin_bottom = 178.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Level_1/L1_button" to="." method="_on_L1_button_pressed"]
[connection signal="pressed" from="Level_2/L2_button" to="." method="_on_L2_button_pressed"]
[connection signal="pressed" from="Level_3/L3_button" to="." method="_on_L3_button_pressed"]
[connection signal="pressed" from="Level_4/L4_button" to="." method="_on_L4_button_pressed"]
[connection signal="pressed" from="Level_5/L5_button" to="." method="_on_L5_button_pressed"]
[connection signal="pressed" from="Level_6/L6_button" to="." method="_on_L6_button_pressed"]
[connection signal="pressed" from="Level_7/L7_button" to="." method="_on_L7_button_pressed"]
[connection signal="pressed" from="Level_8/L8_button" to="." method="_on_L8_button_pressed"]
[connection signal="pressed" from="Level_9/L9_button" to="." method="_on_L9_button_pressed"]
[connection signal="pressed" from="Level_10/L10_button" to="." method="_on_button_pressed"]
